# AdvancedCATDAP

./: .coveragerc  .gitignore  AGENTS.md  HISTORY.md  README.md  build.spec  catdap.py  main.py  pyproject.toml  setup.iss  setup.py
advanced_catdap/: __init__.py  config.py  core.py  visualizer.py
advanced_catdap/components/: discretizer.py  interaction_searcher.py  scoring.py  task_detector.py  utils.py
advanced_catdap/examples/: 01_basic_classification.py  02_basic_regression.py  03_sklearn_pipeline.py  04_visualization.py  05_error_handling.py
advanced_catdap/frontend/: api_client.py  app.py  app_legacy.py  dash_app.py
advanced_catdap/frontend/assets/: style.css
advanced_catdap/runtime/: __init__.py  cli.py  desktop_export.py  gui.py  process.py  worker.py
advanced_catdap/service/: analyzer.py  api.py  dataset_manager.py  executor.py  exporter.py  job_manager.py  local_worker.py  repository.py  schema.py  utils.py  worker.py
examples/: 01_basic_classification.py  02_basic_regression.py  03_sklearn_pipeline.py  04_visualization.py  05_error_handling.py  06_html_export_pair_score_fallback.py  utils.py
scripts/: check_redis.py  check_syntax.py  debug_api_serialization.py  debug_job_status.py  debug_metric.py  debug_preview.py  debug_report.py  diagnose_backend.py  generate_demo_data.py  generate_large_data.py  launch_desktop.py  launch_gui.py  run_tests_manual.py  windows_main.py  windows_main_legacy_streamlit.py
tests/: conftest.py  integration_helpers.py  manual_test_sqlite.py  test_analyzer.py  test_analyzer_metric_smoke.py  test_api.py  test_api_client.py  test_api_desktop_export_integration.py  test_api_integration.py  test_app.py  test_core.py  test_coverage_boost.py  test_dash_app_callbacks.py  test_dash_app_layout.py  test_dataset_manager.py  test_defensive_core.py  test_desktop_export_integration.py  test_discretizer_internal.py  test_executor.py  test_exporter.py  test_feature_details.py  test_frontend_import.py  test_frozen_worker_integration.py  test_job_manager_real.py  test_jobs_api_integration.py  test_launch_desktop.py  test_launch_gui.py  test_local_worker.py  test_project_metadata.py  test_readme_structure_section.py  test_report_manual_migration.py  test_repository.py  test_runtime_cli.py  test_service_utils.py  test_sqlite_integration.py  test_task_detector_scoring_edges.py  test_visualizer.py  test_windows_main.py  test_worker_integration.py
