[project]
name = "advanced_catdap"
version = "0.1.0"
description = "Advanced Categorical Data Analysis Program (AIC-based variable selection)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "pydantic>=2.0",
    "pyarrow>=14.0.0",
    "duckdb>=1.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "celery>=5.0.0",
    "redis>=4.0.0",
    "python-multipart>=0.0.9",
    "eventlet>=0.35.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "celery>=5.0.0",
    "redis>=4.0.0",
    "python-multipart>=0.0.22",
    "eventlet>=0.40.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
